# dku-tetris

./: gradle.properties
app/: build.gradle.kts
app/src/androidTest/java/com/dku/tetris/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dku/tetris/: GameActivity.kt  HalController.kt  HwController.kt  MainActivity.kt
app/src/main/java/com/dku/tetris/gameplay/board/: Board.kt  BoardTimer.kt  BoardView.kt
app/src/main/java/com/dku/tetris/gameplay/piece/: Piece.kt  PieceType.kt  PieceView.kt
app/src/main/java/com/dku/tetris/hw/: HwModule.kt  Piezo.kt  Segment.kt
app/src/main/java/com/dku/tetris/hw/agent/: SegmentAgent.kt
app/src/main/java/com/dku/tetris/settings/dao/: SettingDAO.kt
app/src/main/java/com/dku/tetris/settings/dto/: SettingDTO.kt
app/src/main/java/com/dku/tetris/utils/: Coord.kt  DB.kt
app/src/main/res/layout/: activity_game.xml  activity_main.xml
app/src/main/res/raw/: database.xml
app/src/main/res/values/: attrs_board_view.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dku/tetris/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
